Fixed frontend on mobile and splitted the backend

--- a/static/main.css
+++ b/static/main.css
@@ -142,11 +142,11 @@ img, video {
         font-size: 19px;
     }
     h1{
-        font-size: 37px;
+        font-size: 30px;
     }
     .subtitle{
-        font-size: 25px;
-        margin-top: -35px;
+        font-size: 23px;
+        margin-top: -27px;
     }
     img{
         max-width: 100%;
@@ -168,10 +168,13 @@ img, video {
         font-size: 17px;
     }
     h1{
-        font-size: 32px;
+        font-size: 30px;
+    }
+    h2{
+        font-size: 20px;
     }
     .subtitle{
-        font-size: 24px;
+        font-size: 20px;
         margin-top: -28px;
     }
     .navbar{
